--- a/exts/makra.omniverse.shakespeare.project/config/extension.toml
+++ b/exts/makra.omniverse.shakespeare.project/config/extension.toml
@@ -45,3 +45,8 @@ name = "makra.omniverse.shakespeare.project"
 dependencies = [
     "omni.kit.ui_test" # UI testing extension
 ]
+
+# [python.pipapi]
+# requirements = ['google-generativeai']
+# use_online_index = true
+# extra_args = ["!pip install google-generativeai"]
