--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ _*/
 
 /FIEA
 
-/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/keys.py
+/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/gemini/gemini.env
+/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/convai/convai.env
+/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/gemini/config.json
