--- a/exts/makra.omniverse.shakespeare.project/config/extension.toml
+++ b/exts/makra.omniverse.shakespeare.project/config/extension.toml
@@ -45,3 +45,22 @@ name = "makra.omniverse.shakespeare.project"
 dependencies = [
     "omni.kit.ui_test" # UI testing extension
 ]
+
+[python.pipapi]
+
+requirements = [
+    "requests",
+    "scipy",
+    "wavio",
+    "sounddevice",
+    "requests",
+    "googleapis-common-protos",
+    "grpcio==1.51.1",
+    "grpcio-tools==1.51.1",
+    "protobuf==4.21.10",
+    "PyAudio==0.2.12",
+    "pydub==0.25.1"
+]
+
+use_online_index = true
+ignore_import_check = false
