[Update] Changed entire frontend to PyQt5
Lots of dependency issues implementing it in the Audio2Face kit

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ _*/
 
 /FIEA
 
-/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/gemini/gemini.env
-/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/convai/convai.env
-/exts/makra.omniverse.shakespeare.project/makra/omniverse/shakespeare/project/gemini/config.json
+/src/gemini/gemini.env
+/src/convai/convai.env
+/src/gemini/config.json
