--- a/omni/shakespeare-ai/.gitignore
+++ b/omni/shakespeare-ai/.gitignore
@@ -10,3 +10,6 @@ _*/
 /.vs
 
 /app
+
+/omni/shakespeare-ai/exts/shakespeare.ai/shakespeare/ai/convai/convai.env
+/omni/shakespeare-ai/exts/shakespeare.ai/shakespeare/ai/gemini/gemini.env
