--- a/omni/shakespeare-ai/.gitignore
+++ b/omni/shakespeare-ai/.gitignore
@@ -11,5 +11,5 @@ _*/
 
 /app
 
-/omni/shakespeare-ai/exts/shakespeare.ai/shakespeare/ai/convai/convai.env
-/omni/shakespeare-ai/exts/shakespeare.ai/shakespeare/ai/gemini/gemini.env
+/exts/shakespeare.ai/shakespeare/ai/convai/convai.env
+/exts/shakespeare.ai/shakespeare/ai/gemini/gemini.env
