[Update] Fix executable to include SSL dll

--- a/omni/shakespeare-ai/exts/shakespeare.ai/config/extension.toml
+++ b/omni/shakespeare-ai/exts/shakespeare.ai/config/extension.toml
@@ -30,7 +30,7 @@ changelog="docs/CHANGELOG.md"
 preview_image = "data/preview.png"
 
 # Icon is shown in Extensions window, it is recommended to be square, of size 256x256.
-icon = "data/icon.png"
+icon = "data/sp_logo_inv.png"
 
 # Use omni.ui to build simple UI
 [dependencies]
