--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,12 @@ _*/
 
 /FIEA
 
+/app/src/gemini/gemini.env
+/app/src/convai/convai.env
 /app/src/gemini/config.json
 /app/src/dist
 /app/src/build
 /app/src/main.spec
 /omni/shakespeare-ai/exts/shakespeare.ai/shakespeare/ai/convai/convai.env
 /omni/shakespeare-ai/exts/shakespeare.ai/shakespeare/ai/gemini/gemini.env
+*.env
