[Update] Convo window exit fix

--- a/app/src/convai/convai.env
+++ b/app/src/convai/convai.env
@@ -1,5 +1,5 @@
 [CONVAI]
-API_KEY = 
+API_KEY = c955e106987738cf4583d5af25e520d1
 CHARACTER_ID = 26a9c9c0-326e-11ef-98c5-42010a7be00e
 CHANNEL = stream.convai.com
 ACTIONS = 
