[Update] A2F stop fix

--- a/app/src/convai/convai.env
+++ b/app/src/convai/convai.env
@@ -1,5 +1,5 @@
 [CONVAI]
-API_KEY = 
+API_KEY = 0c9715acbf440b053d63e91ee23fa383
 CHARACTER_ID = 26a9c9c0-326e-11ef-98c5-42010a7be00e
 CHANNEL = stream.convai.com
 ACTIONS = 
